--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -26,7 +26,7 @@
 
     
 
-    <div class="well well-lg text-center" ng-controller="additionController">
+    <div class="well well-lg text-center" ng-controller="calculatorController">
         <h2>Calculator</h2>
         <form class="form-horizontal" role="form">
             <div class="form-group">
@@ -55,7 +55,6 @@
 
 
    </div>
-
 </div> <!-- /container -->
 
 <script src="http://cdn.jsdelivr.net/webjars/angularjs/1.5.0/angular.min.js"
